--- a/maincss.css
+++ b/maincss.css
@@ -3,35 +3,47 @@ a {
     text-decoration: none;
 }
 
+* {
+    font-family: sans-serif;
+}
+
 button {
     font-size: large;
-    background-color: black;
-    border: 2px solid white;
+    background-color: rgb(10, 10, 10);
+    border: 2px solid gray;
     color: white;
+    border-radius: 10px;
+    cursor: pointer;
 }
 
 input[type="text"] {
-    background-color: black;
-    border: 2px solid blue;
-    color: white;
-    font-size: large;
 }
 
 input[type="password"] {
-    background-color: black;
-    border: 2px solid blue;
+}
+
+input {
+    background-color: rgb(10, 10, 10);
+    border: 2px solid rgb(0, 0, 200);
     color: white;
     font-size: large;
+    border-radius: 10px;
+}
+
+input:focus {
+    outline: 2px solid rgb(100, 100, 100);
 }
 
 .Header {
     text-align: left;
-    font-size: 100px;
+    font-size: 50px;
     vertical-align: middle;
+    font-weight: 900;
 }
 .MainText {
     text-align: left;
     font-size: 36px;
+    font-family: Helvetica;
 }
 
 .GameBox {
@@ -50,6 +62,11 @@ input[type="password"] {
     right: 0px;
 }
 
+.BottomTable td{
+    width: 100px;
+    font-size: large;
+}
+
 @keyframes gwgw {
     from {
         transform: scale(0.97, 0.97);
@@ -63,6 +80,28 @@ input[type="password"] {
 
 .Guwanguwan:hover {
     animation: gwgw 0.4s ease-in-out 0s infinite alternate both;
+}
+
+@keyframes byby {
+    from {
+        transform: scale(1, 1);
+    }
+    to {
+        transform: scale(1.03, 1.03);
+    }
+}
+
+.GameBox_Portable {
+    margin-top: 16px;
+    margin-left: 16px;
+    animation: byby 1s ease-in-out 0s infinite alternate both;
+    border: 2px solid gray;
+    border-radius: 10px;
+    background-color: rgb(10, 10, 10);
+    width: 360px;
+    height: 180px;
+    font-size: 15px;
+    cursor:pointer;
 }
 
 @keyframes hwhov {
